Responsive header and hero

--- a/index.html
+++ b/index.html
@@ -1,28 +1,44 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Big Brisket Barbecue</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <header>
-        <img src="/Images/logo.webp" alt="logo">
-        <nav>
+        <a class="toggle" onclick="showNav()">
+            <i class="fa fa-bars" style="color: #ed9339;"></i>
+        </a>
+        <nav id="nav-items">
             <ul>
                 <li>Home</li>
                 <li>Menu</li>
                 <li>Services</li>
             </ul>
         </nav>
+        <img src="Images/logo.webp" alt="Big Brisket Barbecue Logo">
     </header>
+
+    <script>
+        function showNav() {
+            var nav = document.getElementById("nav-items");
+            nav.classList.toggle("show-items");
+        }
+    </script>
+
     <main>
         <section class="hero">
-            <img src="/Images/Hero.jpg" alt="HeroImag">
-            <h1>Indulge in Mouthwatering Smoked Brisket</h1>
+            <h1>Indulge in Mouthwatering Smoked <u style="color: white;">Brisket</u></h1>
             <p>Experience the best Barbecue Brisket in the Comox Valley.</p>
         </section>
         <section class="wedo">
-            <img src="/Images/brisket.jpg" alt="BrisketImg">
+            <img src="Images/briske.jpg" alt="BrisketImg">
             <h1>What we do</h1>
             <p>At Big Brisket Barbecue, we believe that great barbecue brisket
                 starts with great ingredients. That's why we source only the best quality
@@ -39,16 +55,15 @@
             serving up great food.
         </section>
         <section class="images">
-            <img src="/Images/image1.jpg" width="500" alt="">
-            <img src="/Images/image1.jpg" width="500" alt="">
-            <img src="/Images/image1.jpg" width="500" alt="">
-            <img src="/Images/image1.jpg" width="500" alt="">
-            <img src="/Images/image1.jpg" width="500" alt="">
-            <img src="/Images/image1.jpg" width="500" alt="">
-            <img src="/Images/image1.jpg" width="500" alt="">
-            <img src="/Images/image1.jpg" width="500" alt="">
-            <img src="/Images/image1.jpg" width="500" alt="">
-            
+            <img src="Images/image1.jpg" width="500" alt="">
+            <img src="Images/image1.jpg" width="500" alt="">
+            <img src="Images/image1.jpg" width="500" alt="">
+            <img src="Images/image1.jpg" width="500" alt="">
+            <img src="Images/image1.jpg" width="500" alt="">
+            <img src="Images/image1.jpg" width="500" alt="">
+            <img src="Images/image1.jpg" width="500" alt="">
+            <img src="Images/image1.jpg" width="500" alt="">
+            <img src="Images/image1.jpg" width="500" alt="">
         </section>
         <section class="contact">
             <h1>Contact Us</h1>
@@ -58,17 +73,15 @@
                 <label for="email">Email</label>
                 <input type="text" id="email" name="email" placeholder="Your Email">
                 <textarea id="subject" name="subject" placeholder="How can we serve you?" style="height:200px"></textarea>
-                <input type="submit" value="send">
-
+                <input type="submit" value="Send">
             </form>
         </section>
         <footer>
-            <H1>Scoail Media</H1>
-            <img src="/Images/inta logo.webp" alt="instagram" width="100">
-            <img src="/Images/xlogo.png" alt="twitter" width="100">
+            <h1>Social Media</h1>
+            <img src="/Images/inta logo.webp" alt="Instagram" width="100">
+            <img src="/Images/xlogo.png" alt="Twitter" width="100">
             <p>Copyright © 2024 Big Brisket Barbecue - All Rights Reserved.</p>
         </footer>
     </main>
-    
 </body>
 </html>
