Owner and Images Section

--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
             <p>Experience the best Barbecue Brisket in the Comox Valley.</p>
         </section>
         <section class="wedo">
-            <img src="Images/briske.jpg" alt="BrisketImg">
-            <h1>What we do</h1>
+            <h1>What we do<strong style="color: white;">?</strong></h1>
             <p>At Big Brisket Barbecue, we believe that great barbecue brisket
                 starts with great ingredients. That's why we source only the best quality
                 meats, locally whenever possible, and use fresh, natural ingredients in our
@@ -48,11 +47,15 @@
                  serve only on Saturdays from 11-4 or earlier if we sell out!</p>
         </section>
         <section class="whowe">
+            <figure>
+            <img src="Images/owner.png" alt="owner">
+            <figcaption> Jordan Sorrenti</figcaption>
+            </figure><p>
             Big Brisket is owned by Jordan Sorrenti, a foodie who just can't retire. 
             He loves smoked meat and especially barbecue brisket. He's  owned Restaurants 
             (Barbecue, brewery, fine dining, cafe and catering)  in London Ontario, Calgary Alberta
             & Gabriola Island over the years. Now settled in the Comox Valley and doing what he loves,
-            serving up great food.
+            serving up great food.</p>
         </section>
         <section class="images">
             <img src="Images/image1.jpg" width="500" alt="">
@@ -63,7 +66,7 @@
             <img src="Images/image1.jpg" width="500" alt="">
             <img src="Images/image1.jpg" width="500" alt="">
             <img src="Images/image1.jpg" width="500" alt="">
-            <img src="Images/image1.jpg" width="500" alt="">
+            <img class="Image9" src="Images/image1.jpg" width="500" alt="">
         </section>
         <section class="contact">
             <h1>Contact Us</h1>
