Contact Us and Map

--- a/index.html
+++ b/index.html
@@ -66,18 +66,21 @@
             <img src="Images/image1.jpg" width="500" alt="">
             <img src="Images/image1.jpg" width="500" alt="">
             <img src="Images/image1.jpg" width="500" alt="">
-            <img class="Image9" src="Images/image1.jpg" width="500" alt="">
+            <img class="Imagelast" src="Images/image1.jpg" width="500" alt="">
         </section>
         <section class="contact">
             <h1>Contact Us</h1>
             <form action="">
-                <label for="name">Name</label>
-                <input type="text" id="name" name="name" placeholder="Your Name..">
-                <label for="email">Email</label>
-                <input type="text" id="email" name="email" placeholder="Your Email">
-                <textarea id="subject" name="subject" placeholder="How can we serve you?" style="height:200px"></textarea>
-                <input type="submit" value="Send">
-            </form>
+                <div class="name"><label for="name">Name</label>
+                <input type="text" id="name" name="name" placeholder="Your Name.."></div>
+                <div class="email"><label for="email">Email</label>
+                <input type="text" id="email" name="email" placeholder="Your Email"></div>
+                <textarea id="subject" name="subject" placeholder="How can we serve you?" style="height:100px; width: 210px;"></textarea><br>
+                <input type="submit" value="Send" class="submit">
+            </form></section>
+            <section class="Map">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7441.89945400283!2d-124.99826888070912!3d49.70290429734644!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5371706cadf962d3%3A0xcf6947e0d558dce9!2sBig%20Brisket%20Barbecue!5e0!3m2!1sen!2sca!4v1732575804754!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
         </section>
         <footer>
             <h1>Social Media</h1>
