--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         </a>
         <nav id="nav-items">
             <ul>
-                <li>Home</li>
-                <li>Menu</li>
-                <li>Services</li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="menu.html">Menu</a></li>
+                <li><a href="Service.html">Services</a></li>
             </ul>
         </nav>
         <img src="Images/logo.webp" alt="Big Brisket Barbecue Logo">
@@ -75,19 +75,31 @@
                 <input type="text" id="name" name="name" placeholder="Your Name.."></div>
                 <div class="email"><label for="email">Email</label>
                 <input type="text" id="email" name="email" placeholder="Your Email"></div>
-                <textarea id="subject" name="subject" placeholder="How can we serve you?" style="height:100px; width: 210px;"></textarea><br>
+                <textarea id="subject" name="subject" placeholder="How can we serve you?" style="height:100px; width: 215px;"></textarea><br>
                 <input type="submit" value="Send" class="submit">
             </form></section>
             <section class="Map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7441.89945400283!2d-124.99826888070912!3d49.70290429734644!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5371706cadf962d3%3A0xcf6947e0d558dce9!2sBig%20Brisket%20Barbecue!5e0!3m2!1sen!2sca!4v1732575804754!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </div>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7441.89945400283!2d-124.99826888070912!3d49.702904
+                29734644!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5371706cadf962d3%3A0xcf6947e0d558dce9!2sBig%20Brisket%20Barb
+                ecue!5e0!3m2!1sen!2sca!4v1732575804754!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" 
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
         </section>
+    </main>
         <footer>
-            <h1>Social Media</h1>
-            <img src="/Images/inta logo.webp" alt="Instagram" width="100">
-            <img src="/Images/xlogo.png" alt="Twitter" width="100">
+            <div class="links">
+            <div class="Footerstyle">
+                    <ul>
+                        <li><a href="menu.html">Menu</a></li>
+                        <li><a href="Service.html">Services</a></li>
+                    </ul>
+            </div>
+            <Div>
+            <img src="Images/inta logo.webp" alt="Instagram" >
+            <img src="Images/xlogo.png" alt="Twitter" >
+            </Div>
+        </div>
             <p>Copyright © 2024 Big Brisket Barbecue - All Rights Reserved.</p>
         </footer>
-    </main>
+    
 </body>
 </html>
