Html large size View

--- a/Service.html
+++ b/Service.html
@@ -18,7 +18,8 @@
         <nav id="nav-items">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="Service.html">Services</a></li>
+                <li><a href="menu.html">Menu</a></li>
+                <li><a style="color: #ed9339;" href="Service.html">Services</a></li>
             </ul>
         </nav>
         <img src="Images/logo.webp" alt="Big Brisket Barbecue Logo">
