--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </a>
         <nav id="nav-items">
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a style="color: #ed9339;" href="index.html">Home</a></li>
                 <li><a href="menu.html">Menu</a></li>
                 <li><a href="Service.html">Services</a></li>
             </ul>
@@ -57,7 +57,8 @@
             & Gabriola Island over the years. Now settled in the Comox Valley and doing what he loves,
             serving up great food.</p>
         </section>
-        <section class="images">
+        <section class="imagespart">
+        <article class="images">
             <img src="Images/image1.jpg" width="500" alt="">
             <img src="Images/image1.jpg" width="500" alt="">
             <img src="Images/image1.jpg" width="500" alt="">
@@ -66,8 +67,10 @@
             <img src="Images/image1.jpg" width="500" alt="">
             <img src="Images/image1.jpg" width="500" alt="">
             <img src="Images/image1.jpg" width="500" alt="">
-            <img class="Imagelast" src="Images/image1.jpg" width="500" alt="">
+            <img src="Images/image1.jpg" width="500" alt="">
+        </article>
         </section>
+        <section class="Connect">
         <section class="contact">
             <h1>Contact Us</h1>
             <form action="">
@@ -84,6 +87,7 @@
                 ecue!5e0!3m2!1sen!2sca!4v1732575804754!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" 
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
         </section>
+    </section>
     </main>
         <footer>
             <div class="links">
