Did the css menu and service

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </a>
         <nav id="nav-items">
             <ul>
-                <li><a style="color: #ed9339;" href="index.html">Home</a></li>
+                <li><a style="font-weight: 700;" href="index.html">Home</a></li>
                 <li><a href="menu.html">Menu</a></li>
                 <li><a href="Service.html">Services</a></li>
             </ul>
@@ -60,14 +60,12 @@
         <section class="imagespart">
         <article class="images">
             <img src="Images/image1.jpg" width="500" alt="">
-            <img src="Images/image1.jpg" width="500" alt="">
-            <img src="Images/image1.jpg" width="500" alt="">
-            <img src="Images/image1.jpg" width="500" alt="">
-            <img src="Images/image1.jpg" width="500" alt="">
-            <img src="Images/image1.jpg" width="500" alt="">
-            <img src="Images/image1.jpg" width="500" alt="">
-            <img src="Images/image1.jpg" width="500" alt="">
-            <img src="Images/image1.jpg" width="500" alt="">
+            <img src="Images/image2.jpg" width="500" alt="">
+            <img src="Images/image3.jpg" width="500" alt="">
+            <img src="Images/image4.jpg" width="500" alt="">
+            <img src="Images/image5.jpg" width="500" alt="">
+            <img src="Images/image6.jpg" width="500" alt="">
+            <img src="Images/image7.jpg" width="500" alt="">
         </article>
         </section>
         <section class="Connect">
