--- a/Service.html
+++ b/Service.html
@@ -19,7 +19,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="menu.html">Menu</a></li>
-                <li><a style="color: #ed9339;" href="Service.html">Services</a></li>
+                <li><a style="font-weight: 700;" href="Service.html">Services</a></li>
             </ul>
         </nav>
         <img src="Images/logo.webp" alt="Big Brisket Barbecue Logo">
