--- a/menu.html
+++ b/menu.html
@@ -18,7 +18,7 @@
         <nav id="nav-items">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a style="color: #ed9339;" href="menu.html">Menu</a></li>
+                <li><a style="font-weight: 700" href="menu.html">Menu</a></li>
                 <li><a href="Service.html">Services</a></li>
             </ul>
         </nav>
