Code made default code to mobile
did Style
add the video
add floating call number

--- a/Service.html
+++ b/Service.html
@@ -32,6 +32,10 @@
         }
     </script>
     <main>
+        <section class="heroservice">
+            <h1>Commitment to Quality <u style="color: white;">Explore Our Services</u></h1>
+           
+        </section>
  <section class="Service">
         <h1>Rent Our <u style="color: white;">Smoker</u></h1>
         <img src="Images/Smoker.png" alt="smoker">
