--- a/index.html
+++ b/index.html
@@ -65,9 +65,19 @@
             <img src="Images/image4.jpg" width="500" alt="">
             <img src="Images/image5.jpg" width="500" alt="">
             <img src="Images/image6.jpg" width="500" alt="">
-            <img src="Images/image7.jpg" width="500" alt="">
+            <img src="Images/image8.jpg" width="500" alt="">
         </article>
         </section>
+<section class="video">
+
+    <iframe width="900" height="415" src="https://www.youtube.com/embed/PVycYj_PKgk?si=ec4jrYLI_mhb7b8X" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    
+</section>
+
+
+
+
+
         <section class="Connect">
         <section class="contact">
             <h1>Contact Us</h1>
@@ -88,6 +98,10 @@
     </section>
     </main>
         <footer>
+            <div class="floating-phone">
+                <a href="tel:+1234567890">Call Us: +1 (250)-714-5999</a>
+              </div>
+              
             <div class="links">
             <div class="Footerstyle">
                     <ul>
