--- a/menu.html
+++ b/menu.html
@@ -24,6 +24,10 @@
         </nav>
         <img src="Images/logo.webp" alt="Big Brisket Barbecue Logo">
     </header>
+    <section class="heromenu">
+        <h1>Discover Culinary Bliss <u style="color: white;">Explore the Menu</u></h1>
+        
+    </section>
 
     <script>
         function showNav() {
