--- a/Service.html
+++ b/Service.html
@@ -63,7 +63,7 @@
             </ul>
     </div>
     <Div>
-    <img src="Images/inta logo.webp" alt="Instagram" >
+    <img src="Images/inta_logo.webp" alt="Instagram" >
     <img src="Images/xlogo.png" alt="Twitter" >
     </Div>
 </div>
