--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </section>
 <section class="video">
 
-    <iframe width="900" height="415" src="https://www.youtube.com/embed/PVycYj_PKgk?si=ec4jrYLI_mhb7b8X" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="900" height="415" src="https://www.youtube.com/embed/PVycYj_PKgk?si=ec4jrYLI_mhb7b8X" title="YouTube video player" style="border: 0;" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     
 </section>
 
@@ -81,7 +81,7 @@
         <section class="Connect">
         <section class="contact">
             <h1>Contact Us</h1>
-            <form action="">
+            <form>
                 <div class="name"><label for="name">Name</label>
                 <input type="text" id="name" name="name" placeholder="Your Name.."></div>
                 <div class="email"><label for="email">Email</label>
@@ -90,10 +90,7 @@
                 <input type="submit" value="Send" class="submit">
             </form></section>
             <section class="Map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7441.89945400283!2d-124.99826888070912!3d49.702904
-                29734644!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5371706cadf962d3%3A0xcf6947e0d558dce9!2sBig%20Brisket%20Barb
-                ecue!5e0!3m2!1sen!2sca!4v1732575804754!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" 
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7441.89945400283!2d-124.99826888070912!3d49.70290429734644!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5371706cadf962d3%3A0xcf6947e0d558dce9!2sBig%20Brisket%20Barbecue!5e0!3m2!1sen!2sca!4v1732575804754!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </section>
     </section>
     </main>
@@ -110,7 +107,7 @@
                     </ul>
             </div>
             <Div>
-            <img src="Images/inta logo.webp" alt="Instagram" >
+            <img src="Images/inta_logo.webp" alt="Instagram">
             <img src="Images/xlogo.png" alt="Twitter" >
             </Div>
         </div>
