--- a/menu.html
+++ b/menu.html
@@ -40,76 +40,68 @@
         <h1>Our Menu</h1>
         <table class="menu">
             <thead>
-                <tr>
-                    <th>Handheld</th>
-                    <th>MRP</th>
-                </tr>
+              <tr>
+                <th>Category</th>
+                <th>Item</th>
+                <th>MRP</th>
+              </tr>
             </thead>
             <tbody>
-                <tr>
-                    <td>Brisket Sandwich</td>
-                    <td>12.50</td>
-                </tr>
-                <tr>
-                    <td>Smash Burger Single</td>
-                    <td>9.90</td>
-                </tr>
-                <tr>
-                    <td>Brisket Hoagie</td>
-                    <td>15.50</td>
-                </tr>
-                <tr>
-                    <td>Smash Burger Double</td>
-                    <td>12.50</td>
-                </tr>
-                <thead>
-                    <tr>
-                        <th>Poutine</th>
-                        <th>MRP</th>
-                    </tr>
-                </thead>
-                <tr>
-                    <td>Regular Poutine</td>
-                    <td>7.50</td>
-                </tr>
-                <tr>
-                    <td>Brisket Poutine</td>
-                    <td>9.90</td>
-                </tr>
-                <thead>
-                    <tr>
-                        <th>Side Dishes</th>
-                        <th>MRP</th>
-                    </tr>
-                </thead>
-                <tr>
-                    <td>Fries</td>
-                    <td>5.50</td>
-                </tr>
-                <tr>
-                    <td>Cole Slaw</td>
-                    <td>3.50</td>
-                </tr>
-                <tr>
-                    <td>Baked Beans</td>
-                    <td>3.75</td>
-                </tr>
-                <thead>
-                    <tr>
-                        <th>Beverages</th>
-                        <th>MRP</th>
-                    </tr>
-                </thead>
-                <tr>
-                    <td>Soft Drinks</td>
-                    <td>2.25</td>
-                </tr>
-                <tr>
-                    <td>Spring Water</td>
-                    <td>2.00</td>
-                </tr>
+              <!-- Handheld items -->
+              <tr>
+                <td rowspan="4">Handheld</td>
+                <td>Brisket Sandwich</td>
+                <td>12.50</td>
+              </tr>
+              <tr>
+                <td>Smash Burger Single</td>
+                <td>9.90</td>
+              </tr>
+              <tr>
+                <td>Brisket Hoagie</td>
+                <td>15.50</td>
+              </tr>
+              <tr>
+                <td>Smash Burger Double</td>
+                <td>12.50</td>
+              </tr>
+              <!-- Poutine items -->
+              <tr>
+                <td rowspan="2">Poutine</td>
+                <td>Regular Poutine</td>
+                <td>7.50</td>
+              </tr>
+              <tr>
+                <td>Brisket Poutine</td>
+                <td>9.90</td>
+              </tr>
+              <!-- Side Dishes -->
+              <tr>
+                <td rowspan="3">Side Dishes</td>
+                <td>Fries</td>
+                <td>5.50</td>
+              </tr>
+              <tr>
+                <td>Cole Slaw</td>
+                <td>3.50</td>
+              </tr>
+              <tr>
+                <td>Baked Beans</td>
+                <td>3.75</td>
+              </tr>
+              <!-- Beverages -->
+              <tr>
+                <td rowspan="2">Beverages</td>
+                <td>Soft Drinks</td>
+                <td>2.25</td>
+              </tr>
+              <tr>
+                <td>Spring Water</td>
+                <td>2.00</td>
+              </tr>
             </tbody>
-        </table>
+          </table>
+          
     </section>
 </main>
 <footer>
@@ -121,7 +113,7 @@
             </ul>
     </div>
     <Div>
-    <img src="Images/inta logo.webp" alt="Instagram" >
+    <img src="Images/inta_logo.webp" alt="Instagram" >
     <img src="Images/xlogo.png" alt="Twitter" >
     </Div>
 </div>
